<resources>
    <string name="app_name">Cmd Application Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product name</string>
    <string name="default_price">10.00</string>
    <string name="currency">DH</string>
    <string name="default_qte">120</string>
    <string name="product">Product</string>
    <string name="promotion">Promotion</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="marque">Marque</string>
    <string name="search">Search</string>
    <string name="qr_code">qr Code</string>
    <string name="get_clients">get Clients</string>
    <string name="edit_partner">edit partner</string>
    <string name="update_location">update location</string>
    <string name="patent">Patent</string>
    <string name="ice">ICE</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="partner_name">Partner Name</string>
    <string name="default_tariff">0</string>
    <string name="user_picture">user picture</string>
    <string name="type_tariff">type tariff :</string>
    <string name="mt">Montant totale</string>
    <string name="quantity">Quantity</string>
    <string name="vente">Vente</string>
    <string name="is_favorite_product">is Favorite Product</string>
    <string name="cart">cart</string>
    <string name="save_invoice">save invoice</string>
    <string name="retour">Retour</string>
    <string name="echange">Echange</string>
    <string name="type_line">type line</string>
    <string name="invoice_line_id">invoice line id</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="default_price_unit">0.00</string>
    <string name="choose_partner">Choose Partner</string>
    <string name="partners">Partners</string>
    <string name="counter">counter</string>
    <string name="default_notification_value">0</string>
    <string name="especes">especes</string>
    <string name="cheque">cheque</string>
    <string name="credit">credit</string>
    <string name="prix_totale">Prix Totale :</string>
</resources>
