<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/ic_bottom_product"
        android:title="@string/product" />

    <item
        android:id="@+id/nav_promotion"
        android:icon="@drawable/ic_promotion"
        android:title="@string/promotion" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_category"
        android:title="@string/category" />
    <item
        android:id="@+id/nav_brand"
        android:icon="@drawable/ic_brand"
        android:title="@string/marque" />
</menu>