<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiter"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">


        <ImageView
            android:id="@+id/image_product_invoice_line"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_product" />

        <TextView
            android:id="@+id/text_view_product_name_invoice_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/text_view_type"
            android:layout_toEndOf="@+id/image_product_invoice_line"
            android:text="@string/product_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:text="@string/type_line"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_product_price_invoice_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_type"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/currency_invoice_line"
            android:text="@string/default_price"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/currency_invoice_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_type"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:text="@string/currency"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/text_view_qte_invoice_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_product_name_invoice_line"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/image_product_invoice_line"
            android:text="@string/default_qte"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_calculate_qte_price_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_product_price_invoice_line"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/image_product_invoice_line"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/default_price_unit"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>
</android.support.v7.widget.CardView>