<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_round"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnr_txt_mt_invoice_validate_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_mt_invoice_validate_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/default_price_unit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lnr_container_invoice_validate_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiter"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/radio_group_validate_invoice_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:textDirection="rtl">

            <RadioButton
                android:id="@+id/sale_radio_validate_invoice_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="4dp"
                android:background="@color/colorLight"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/especes"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="4dp"
                android:background="@color/colorLight"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/cheque"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="4dp"
                android:background="@color/colorLight"
                android:button="@null"
                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                android:text="@string/credit"
                android:textAlignment="textStart"
                android:textSize="18sp" />

        </RadioGroup>


        <LinearLayout
            android:id="@+id/lnr_btn_invoice_validate_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_invoice_validate_dialog"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel_sale_dialog_gradient"
                android:text="@string/annuler"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_validate_invoice_validate_dialog"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_validate_sale_dialog_gradient"
                android:text="@string/valider"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
